--- a/src/index.css
+++ b/src/index.css
@@ -146,3 +146,47 @@
 .add-button:hover {
   background-color: #0056b3;
 }
+
+.login-container {
+  width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid black;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  color:black;
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.login-form input {
+  margin-bottom: 15px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.login-form button {
+  padding: 10px 20px;
+  background-color: black;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  width:30%;
+}
+
+
+.error-message {
+  color: #ff0000;
+  margin-bottom: 10px;
+}
+
+
+.success-message {
+  color: #008000;
+  margin-bottom: 10px;
+}
